# pontilus

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  build_all.sh  build_example.sh  build_test.sh  install_deps.sh  project.4coder  tbuild.sh
assets/models/: monkee.gltf
assets/shaders/: complex_graph.frag  complex_graph.vert  debug.frag  debug.vert  default.frag  default.glsl  default.vert  mandelbrot.frag  model.frag  model.vert  pointmap.frag  pointmap.vert  post.frag
assets/tests/: a_json_file.json
examples/: .vimrc  SceneFile.cpp  SceneFile.h  build_all.sh  build_test.sh  mandelbrot.cpp  platformer.cpp  rpg.cpp  shadertoy.cpp  slinger.cpp  test.cpp
examples/chess_clone/: CMakeLists.txt  ChessPiece.cpp  ChessPiece.h  ChessScene.cpp  ChessScene.h  main.cpp
examples/platformer/: CMakeLists.txt  editor.cpp  editor.h  item.cpp  item.h  main.cpp  player.cpp  player.h  tilemap.cpp  tilemap.h
examples/platformer_ext/: CMakeLists.txt  button.h  coin.cpp  coin.h  common.h  enemy.cpp  enemy.h
examples/rpg_ext/: CMakeLists.txt
examples/rpg_game/: CMakeLists.txt  Enemy.cpp  Enemy.h  NPC.cpp  NPC.h  Player.cpp  Player.h  TextBox.cpp  TextBox.h  rpg.cpp
include/: Application.h  Camera.h  GameObject.h  InputListener.h  LinkedList.h  Math.h  Obj2D.h  Obj3D.h  PMath.h  Primitive.h  Rend.h  RenderBatch.h  Renderer.h  Scene.h  Shader.h  Texture.h  Utils.h  Window.h  rData.h
include/audio/: AudioMaster.h
include/core/: Application.h  Component.h  InputListener.h  Scene.h
include/ecs/: Animation.h  AudioSource.h  Component.h  GameObject.h  SpriteRenderer.h  TextRenderer.h
include/graphics/: Camera.h  Font.h  Shader.h  rData.h
include/math/: Math.h
include/physics2d/: Body2D.h  CollisionDetection.h  CollisionResolution.h  Constraint.h  Physics2DController.h
include/pontilus/audio/: AudioListener.h  AudioMaster.h  AudioSource.h
include/pontilus/core/: Application.h  InputListener.h  Scene.h
include/pontilus/ecs/: Component.h  Entity.h  EntityBuilder.h  Transform.h
include/pontilus/gui/: UIElement.h  UIFrame.h
include/pontilus/math/: Math.h
include/pontilus/math/geometry/: Line.h  Rect.h
include/pontilus/model/: ModelRenderer.h
include/pontilus/physics2d/: Body2D.h  CollisionDetection.h  CollisionResolution.h  Constraint.h  Physics2DController.h
include/pontilus/postprocessing/: PointMap.h
include/pontilus/ptlib/: Animation.h  StateMachine.h
include/pontilus/renderer/: Font.h  Primitive.h  Renderer.h  Shader.h  SpriteRenderer.h  TextRenderer.h  Texture.h  rData.h
include/pontilus/utils/: PMath.h  Utils.h
include/postprocessing/: PointMap.h
include/utils/: PMath.h  Utils.h
pontilus/: notepad.todo
pontilus/audio/: AudioMaster.cpp
pontilus/core/: Application.cpp  Application.h  InputListener.cpp  InputListener.h  Scene.cpp  Scene.h
pontilus/ecs/: Animation.h  Body2D.cpp  Body2D.h  Component.h  GameObject.cpp  GameObject.h  SpriteRenderer.cpp  SpriteRenderer.h  StateMachine.cpp  StateMachine.h  TextRenderer.cpp  TextRenderer.h
pontilus/graphics/: Camera.cpp  Font.cpp  Primitive.h  Renderer.h  Texture.cpp  Texture.h
pontilus/physics2d/: Body2D.cpp  Body2D.h  CollisionDetection.cpp  CollisionDetection.h  CollisionResolution.cpp  CollisionResolution.h  Physics2DController.cpp  Physics2DController.h
pontilus/postprocessing/: PointMap.h
pontilus/utils/: PMath.cpp  PMath.h  Utils.cpp  Utils.h
python/: README.md  build_module.sh  pontilus_engine.cpp  setup.py  temp  test.py  test_module.sh
src/: Application.cpp  CMakeLists.txt  LinkedList.cpp  Math.cpp  Renderer.cpp  Shader.cpp  main.cpp  notepad.todo  notepad.txt  test.cpp
src/audio/: AudioListener.cpp  AudioListener.h  AudioMaster.cpp  AudioMaster.h  AudioSource.cpp  AudioSource.h  CMakeLists.txt
src/core/: Application.cpp  Application.h  CMakeLists.txt  GameObject.cpp  InputListener.cpp  InputListener.h  Scene.cpp  Scene.h
src/ecs/: Animation.cpp  Animation.h  AudioListener.cpp  AudioListener.h  AudioSource.cpp  AudioSource.h  Body2D.cpp  Body2D.h  CMakeLists.txt  Component.cpp  Component.h  Entity.cpp  Entity.h  EntityBuilder.cpp  EntityBuilder.h  GameObject.cpp  GameObject.h  SpriteRenderer.cpp  SpriteRenderer.h  StateMachine.cpp  StateMachine.h  TextRenderer.cpp  TextRenderer.h  Transform.cpp  Transform.h
src/engine/: Application.cpp  Renderer.cpp  Shader.cpp
src/graphics/: Application.cpp  CMakeLists.txt  Camera.cpp  Camera.h  Font.cpp  Font.h  PointMap.cpp  Primitive.cpp  Primitive.h  Rend.cpp  RenderBatch.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  rData.cpp  rData.h
src/gui/: UIElement.h  UIFrame.h
src/math/: CMakeLists.txt  Math.h
src/math/geometry/: Rect.cpp  Rect.h
src/math/number/: FloatUtils.cpp  FloatUtils.h
src/math/set/: Span.cpp  Span.h
src/model/: CMakeLists.txt  Model3D.cpp  ModelRenderer.cpp  ModelRenderer.h  Obj2D.cpp  Obj3D.cpp
src/physics/: CollisionDetection.cpp
src/physics2d/: Body2D.cpp  Body2D.h  CMakeLists.txt  CollisionDetection.cpp  CollisionDetection.h  CollisionResolution.cpp  Constraint.cpp  Constraint.h  Physics2DController.cpp  Physics2DController.h
src/postprocessing/: PointMap.h
src/ptlib/: Animation.cpp  Animation.h  CMakeLists.txt  Colors.cpp  Colors.h  StateMachine.cpp  StateMachine.h  TileMap.cpp
src/renderer/: CMakeLists.txt  Camera.cpp  Camera.h  Font.cpp  Font.h  Primitive.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h  organize.md  rData.cpp  rData.h
src/utils/: CMakeLists.txt  JSON.cpp  LinkedList.cpp  Math.cpp  PMath.cpp  Utils.cpp  Utils.h
tests/: JSONRead.cpp
